<resources>
    <string name="app_name">Project2</string>
    <string name="menu_main_logout">Logout</string>
    <string name="facebook_app_id">1819898281601617</string>
    <string name="server_ip">143.248.49.156</string>
    <string name="server_port">3000</string>
    <string name="intent_action_broadcast_push">com.group2.team.proj2.broadcast_push</string>

    <string name="c_add_positive">Submit</string>
    <string name="c_add_negative">Cancel</string>
    <string name="c_add_button">Add</string>
    <string name="c_add_toast_your">This email is your email.</string>
    <string name="c_add_toast_already">You already added this email.</string>
    <string name="c_add_toast_unavailable">This email is not registered yet.</string>
    <string name="c_add_total">총 금액</string>
    <string name="c_add_person">1인당 금액</string>
    <string name="c_add_email_hint">Enter email</string>
    <string name="c_add_account_hint">Account number</string>
    <string name="c_notification_please">빨리 돈 좀 보내거라!!!</string>
    <string name="c_notification_new">보내야 할 돈!</string>
    <string name="c_notification_old">송금 확인 됨!</string>
    <string name="c_notification_text_new">보낼 것을 부탁함</string>
    <string name="c_notification_text_old">보낸 것을 확인함</string>
    <string name="c_add_toast_noperson">No one is added.</string>
    <string name="c_add_toast_noamount">You do not enter the amount.</string>
    <string name="c_add_toast_noaccount">You do not enter the account.</string>
    <string name="c_receive_positive">Submit</string>
    <string name="c_receive_negative">Cancel</string>
    <string name="c_receive_please">독촉하기</string>
</resources>
